[gd_scene load_steps=19 format=2]

[ext_resource path="res://code/Shopmenu.gd" type="Script" id=1]
[ext_resource path="res://asset/MinimalUI/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://asset/red-cross-mark-png-image-5a3bc245dab093.9398706415138657978958-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://asset/farmingTilesheetComplete (1).png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 260, 300 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 192, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 144, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 173.0
color = Color( 0.898039, 0.921569, 0.698039, 1 )

[node name="close" type="AnimatedSprite" parent="bg"]
position = Vector2( 260.25, 12 )
scale = Vector2( 0.0942307, 0.08 )
frames = SubResource( 12 )

[node name="closebut" type="Button" parent="bg"]
show_behind_parent = true
margin_left = 248.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 25.0

[node name="Shop" type="Label" parent="bg"]
margin_left = 8.0
margin_right = 48.0
margin_bottom = 23.0
theme = ExtResource( 2 )
text = "Shop"

[node name="carrot" type="AnimatedSprite" parent="bg"]
position = Vector2( 56, 48 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )

[node name="carrotcolor" type="ColorRect" parent="bg"]
margin_left = 40.0
margin_top = 64.0
margin_right = 72.0
margin_bottom = 84.0
color = Color( 0.701961, 0.898039, 0.745098, 1 )

[node name="Label2" type="Label" parent="bg"]
margin_left = 42.0
margin_top = 61.0
margin_right = 70.0
margin_bottom = 84.0
theme = ExtResource( 2 )
text = "buy"

[node name="carrotbuy" type="Button" parent="bg"]
show_behind_parent = true
margin_left = 40.0
margin_top = 64.0
margin_right = 72.0
margin_bottom = 84.0

[node name="onion" type="AnimatedSprite" parent="bg"]
position = Vector2( 136, 48 )
scale = Vector2( 2, 2 )
frames = SubResource( 14 )

[node name="onioncolor" type="ColorRect" parent="bg"]
margin_left = 120.0
margin_top = 64.0
margin_right = 152.0
margin_bottom = 84.0
color = Color( 1, 0.529412, 0.529412, 1 )

[node name="Label3" type="Label" parent="bg"]
margin_left = 122.0
margin_top = 62.0
margin_right = 150.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "buy"

[node name="onionbuy" type="Button" parent="bg"]
show_behind_parent = true
margin_left = 120.0
margin_top = 64.0
margin_right = 152.0
margin_bottom = 84.0

[node name="cabbage" type="AnimatedSprite" parent="bg"]
position = Vector2( 208, 48 )
scale = Vector2( 2, 2 )
frames = SubResource( 15 )

[node name="cabbagecolor" type="ColorRect" parent="bg"]
margin_left = 192.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 84.0
color = Color( 1, 0.529412, 0.529412, 1 )

[node name="Label4" type="Label" parent="bg"]
margin_left = 194.0
margin_top = 62.0
margin_right = 222.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "buy"

[node name="cabbagebuy" type="Button" parent="bg"]
show_behind_parent = true
margin_left = 192.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 84.0

[node name="berry" type="AnimatedSprite" parent="bg"]
position = Vector2( 56, 104 )
scale = Vector2( 1.95312, 2 )
frames = SubResource( 16 )

[node name="berrycolor" type="ColorRect" parent="bg"]
margin_left = 40.0
margin_top = 120.0
margin_right = 72.0
margin_bottom = 140.0
color = Color( 1, 0.529412, 0.529412, 1 )

[node name="Label5" type="Label" parent="bg"]
margin_left = 42.0
margin_top = 118.0
margin_right = 70.0
margin_bottom = 141.0
theme = ExtResource( 2 )
text = "buy"

[node name="berrybuy" type="Button" parent="bg"]
show_behind_parent = true
margin_left = 40.0
margin_top = 120.0
margin_right = 72.0
margin_bottom = 140.0

[node name="corn" type="AnimatedSprite" parent="bg"]
position = Vector2( 136, 104 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )

[node name="corncolor" type="ColorRect" parent="bg"]
margin_left = 120.0
margin_top = 120.0
margin_right = 152.0
margin_bottom = 140.0
color = Color( 1, 0.529412, 0.529412, 1 )

[node name="Label6" type="Label" parent="bg"]
margin_left = 122.0
margin_top = 118.0
margin_right = 150.0
margin_bottom = 141.0
theme = ExtResource( 2 )
text = "buy"

[node name="cornbuy" type="Button" parent="bg"]
show_behind_parent = true
margin_left = 120.0
margin_top = 120.0
margin_right = 152.0
margin_bottom = 140.0

[node name="Label8" type="Label" parent="bg"]
margin_left = 153.0
margin_top = 93.0
margin_right = 193.0
margin_bottom = 116.0
theme = ExtResource( 2 )
text = "=16"

[node name="Label7" type="Label" parent="bg"]
margin_left = 69.0
margin_top = 92.0
margin_right = 109.0
margin_bottom = 115.0
theme = ExtResource( 2 )
text = "=12"

[node name="Label9" type="Label" parent="bg"]
margin_left = 155.0
margin_top = 36.0
margin_right = 195.0
margin_bottom = 59.0
theme = ExtResource( 2 )
text = "=5"

[node name="Label10" type="Label" parent="bg"]
margin_left = 226.0
margin_top = 37.0
margin_right = 266.0
margin_bottom = 60.0
theme = ExtResource( 2 )
text = "=8"

[node name="AnimatedSprite" type="AnimatedSprite" parent="bg"]
position = Vector2( 99, 13 )
frames = SubResource( 19 )

[node name="money" type="Label" parent="bg"]
margin_left = 110.0
margin_top = 2.0
margin_right = 150.0
margin_bottom = 25.0
theme = ExtResource( 2 )
text = "="

[node name="Label" type="Label" parent="bg"]
margin_left = 71.0
margin_top = 36.0
margin_right = 131.0
margin_bottom = 59.0
theme = ExtResource( 2 )
text = "=3"

[connection signal="pressed" from="bg/closebut" to="." method="_on_closebut_pressed"]
[connection signal="pressed" from="bg/closebut" to="bg" method="_on_closebut_pressed"]
[connection signal="pressed" from="bg/carrotbuy" to="." method="_on_carrotbuy_pressed"]
[connection signal="pressed" from="bg/carrotbuy" to="bg" method="_on_carrotbuy_pressed"]
[connection signal="pressed" from="bg/onionbuy" to="." method="_on_onionbuy_pressed"]
[connection signal="pressed" from="bg/onionbuy" to="bg" method="_on_onionbuy_pressed"]
[connection signal="pressed" from="bg/cabbagebuy" to="." method="_on_cabbagebuy_pressed"]
[connection signal="pressed" from="bg/cabbagebuy" to="bg" method="_on_cabbagebuy_pressed"]
[connection signal="pressed" from="bg/berrybuy" to="." method="_on_berrybuy_pressed"]
[connection signal="pressed" from="bg/berrybuy" to="bg" method="_on_berrybuy_pressed"]
[connection signal="pressed" from="bg/cornbuy" to="." method="_on_cornbuy_pressed"]
[connection signal="pressed" from="bg/cornbuy" to="bg" method="_on_cornbuy_pressed"]
